# Teye-Contracts

./: ALL_TEST_FIXES_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CREATE_PR_GUIDE.md  Cargo.toml  NEXT_STEPS.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SOLUTION_SUMMARY.md  TASK2_IMPLEMENTATION.md  TASK3_IMPLEMENTATION.md  check_errors.txt  check_errors2.txt  check_errors3.txt  deny.toml  test_results.txt  verify_all_tests.ps1  verify_all_tests.sh
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  deploy-production.yml  deploy-testnet.yml  fuzz.yml  mutation.yml  pre-commit.yml  quality.yml  release.yml  security.yml  test.yml
contracts/ai_integration/tests/: access_test.rs  provider_rotation_test.rs
contracts/analytics/src/: aggregation.rs  differential_privacy.rs  events.rs  homomorphic.rs  lib.rs  test.rs
contracts/analytics/test/: cross_contract_test.rs  init_test.rs  time_test.rs  validation_test.rs
contracts/analytics/tests/: access_test.rs  cross_contract_test.rs  cross_query_prevention.rs  gas_profiling_test.rs  isolation_layer_validation.rs  math_test.rs  multi_tenant_isolation.rs  time_test.rs
contracts/audit/: Cargo.toml
contracts/audit/src/: consistency.rs  lib.rs  merkle_log.rs  search.rs  types.rs
contracts/audit/tests/: events_test.rs  validation_test.rs
contracts/common/: Cargo.toml
contracts/common/src/: admin_tiers.rs  concurrency.rs  conflict_resolver.rs  consent.rs  credential_types.rs  keys.rs  keys_test.rs  lib.rs  lineage.rs  meta_tx.rs  metering.rs  migration.rs  multisig.rs  nonce.rs  operational_transform.rs  pausable.rs  policy_dsl.rs  policy_engine.rs  progressive_auth.rs  provenance_graph.rs  rate_limit.rs  state_machine.rs  transaction.rs  vault_types.rs  vector_clock.rs  versioned_storage.rs  whitelist.rs
contracts/compliance/: Cargo.toml
contracts/compliance/src/: access_control.rs  audit.rs  breach_detector.rs  gdpr.rs  hipaa.rs  retention.rs  rules_engine.rs
contracts/compliance/tests/: core.rs
contracts/cross_chain/: Cargo.toml
contracts/cross_chain/src/: bridge.rs  events.rs  lib.rs  merkle_tree.rs  relay.rs  test.rs
contracts/cross_chain/tests/: cross_contract_test.rs  math_test.rs  refund_flow_resilience_test.rs  time_test.rs
contracts/delegation/src/: test.rs
contracts/delegation/tests/: validation_test.rs
contracts/emr_bridge/src/: emr_bridge.rs  events.rs  storage.rs
contracts/emr_bridge/tests/: access_test.rs  cross_contract_test.rs
contracts/events/: Cargo.toml
contracts/events/src/: lib.rs  registry.rs  replay.rs  subscription.rs  test.rs
contracts/events/tests/: events_test.rs  init_test.rs  math_test.rs  validation_test.rs
contracts/fhir/: Cargo.toml
contracts/fhir/proptest-regressions/: test.txt
contracts/fhir/src/: lib.rs  test.rs  types.rs
contracts/governor/: Cargo.toml
contracts/identity/: Cargo.toml
contracts/identity/src/: credential.rs  did.rs  events.rs  lib.rs  recovery.rs
contracts/identity/tests/: core.rs  did_proof_test.rs  math_test.rs  validation_test.rs  vc_expiry_test.rs
contracts/key_manager/: Cargo.toml
contracts/key_manager/src/: attestation.rs  derivation.rs  hierarchy.rs  lib.rs  rotation.rs
contracts/key_manager/tests/: core.rs  cross_contract_test.rs
contracts/metering/: Cargo.toml
contracts/orchestrator/: Cargo.toml
contracts/orchestrator/src/: deadlock.rs  errors.rs  events.rs  lib.rs  rollback.rs  test_gas_benchmarks.rs  test_orchestrator.rs  transaction.rs  validation.rs
contracts/staking/: Cargo.toml
contracts/state_channel/: Cargo.toml
contracts/vault/: Cargo.toml
contracts/vision_records/: Cargo.toml
contracts/vision_records/src/: audit.rs  circuit_breaker.rs  errors.rs  events.rs  examination.rs  lib.rs  patient.rs  patient_profile.rs  prescription.rs  prescription_tests.rs  rate_limit.rs  rbac.rs  test.rs  test_admin_tiers.rs  test_batch.rs  test_occ.rs  test_pause.rs  test_rbac.rs  types.rs  validation.rs
contracts/vision_records/tests/: audit.rs  core.rs  errors.rs  patient_profile.rs  provider.rs  rbac.rs  simple_patient_test.rs
contracts/vision_records/tests/property/: access.rs  core.rs  main.rs  rbac.rs  state_machine.rs
contracts/zk_verifier/: ARCHITECTURE.md  COMPILATION_CHECKLIST.md  Cargo.toml  FIXES_APPLIED.md  IMPORT_STRUCTURE.md  INDEX.md  QUICK_START.md  README_FIXES.md  verify_fixes.ps1  verify_fixes.sh
contracts/zk_verifier/src/: audit.rs  credentials.rs  events.rs  helpers.rs  lib.rs  plonk.rs  revocation.rs  selective_disclosure.rs  verifier.rs  vk.rs
contracts/zk_verifier/tests/: bench_verify.rs  test_exports.rs  test_nonce_replay.rs  test_zk_access.rs
contracts/zk_voting/: Cargo.toml
contracts/zk_voting/src/: ballot.rs  lib.rs  merkle.rs
contracts/zk_voting/tests/: test_voting.rs
docs/: access-control-architecture.md  architecture.md  audit-logging.md  data-flows.md  deployment.md  emergency-contacts.md  error-codes.md  fuzzing.md  incident-response-plan.md  operations.md  property-testing.md  rbac-quick-reference.md  release-management.md  security.md  storage-key-conventions.md  testing-strategy.md  testing.md  zk-architecture.md  zk-integration-guide.md
docs/compliance/: README.md  architecture.md  audit-trail.md  consent-management.md  data-classification.md  deployment-guide.md  hipaa-mapping.md
docs/runbook/: README.md  deployment.md  incident-response.md  monitoring.md  pre-deployment.md  upgrades.md
docs/sdk/: README.md  javascript.md  python.md  rust.md
docs/security/: README.md  access-control-matrix.md  contract-profiles.md  cryptography.md  rate-limiting.md
example/python/: event_poller.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: audit.rs  staking.rs
scripts/: build_release_artifacts.sh  check_storage_keys.sh  deploy_with_rollback.sh  generate_release_notes.sh  migrate.sh  prepare_release_version.sh  run_coverage.sh  visualize_lineage.sh  visualize_states.sh
test/: Cargo.toml
test/framework/: generators.rs  invariants.rs  mod.rs  scenario_dsl.rs  state_explorer.rs
test/tests/: integration_tests.rs
test/upgrade/: backward_compatibility.rs  migration.rs
(+39 files in other folders)
