[workspace]
resolver = "2"

members = [
    "contracts/key_manager",
    "contracts/vision_records",
    "contracts/ai_integration",
    "contracts/staking",
    "contracts/compliance",
    "contracts/common",
    "contracts/identity",
    "contracts/zk_verifier",
    "contracts/zk_voting",
    "contracts/fhir",
    "contracts/cross_chain",
    "contracts/analytics",
    "contracts/treasury",
    "contracts/audit",
    "contracts/emr_bridge",
    "contracts/orchestrator",
    "contracts/state_channel",
    "contracts/metering",
    "sdk/zk_prover",
    "test",
]

[workspace.package]
version = "1.2.2"
authors = ["Stellar-Teye Contributors"]
license = "MIT"
edition = "2021"
repository = "https://github.com/Stellar-Teye/Teye-Contracts"
rust-version = "1.78"


[workspace.dependencies]
soroban-sdk = "25.1.1"

# The Fix: default-features = false prevents the 'imp' error
proptest = { version = "1.0.0", default-features = false, features = ["alloc"] }
proptest-derive = { version = "0.4.0", default-features = false }

# Ensure getrandom is also set for WASM
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true