[package]
name = "identity"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
zk_verifier = { path = "../zk_verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
zk_verifier = { path = "../zk_verifier", features = ["testutils"] }
# Use workspace = true here so it pulls the 'no_std' settings from the root
proptest = { workspace = true }
proptest-derive = { workspace = true }