[package]
name = "key_manager"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
identity = { path = "../identity" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
