[package]
name = "zk_voting"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
zk_verifier = { path = "../zk_verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
zk_verifier = { path = "../zk_verifier", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils", "zk_verifier/testutils"]
